Closed Bug 399453 Opened 17 years ago Closed 17 years ago

Mingw build error in cairo-win32-surface.c - error: conflicting types for '_cairo_win32_surface_get_extents'

Categories

(Core :: Graphics, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: martijn.martijn, Assigned: martijn.martijn)

References

Details

Attachments

(1 file)

Attached patch patchSplinter Review
I got this build error.
The attached patch seems to fix it.

S=1 -DMOZ_FEEDS=1 -DMOZ_STORAGE=1 -DMOZ_SAFE_BROWSING=1 -DMOZ_URL_CLASSIFIER=1 -
DMOZ_LOGGING=1 -DHAVE___CXA_DEMANGLE=1 -DMOZ_DEMANGLE_SYMBOLS=1 -DMOZ_USER_DIR=\
"Mozilla\" -DHAVE_STDINT_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_UINT64_T=1 -DMOZ_XUL=1 -
DMOZ_PROFILELOCKING=1 -DMOZ_RDF=1 -DMOZ_MORKREADER=1 -DMOZ_DLL_SUFFIX=\".dll\" -
DJS_THREADSAFE=1 -DMOZ_REFLOW_PERF=1 -DMOZ_REFLOW_PERF_DSP=1 -DMOZILLA_LOCALE_VE
RSION=\"1.9a1\" -DMOZILLA_REGION_VERSION=\"1.9a1\" -DMOZILLA_SKIN_VERSION=\"1.8\
"  -D_MOZILLA_CONFIG_H_ -DMOZILLA_CLIENT /cygdrive/c/mozilla/mozilla/gfx/cairo/c
airo/src/cairo-win32-surface.c
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:39:1: warning: "WIN
32_LEAN_AND_MEAN" redefined
<command line>:29:1: warning: this is the location of the previous definition
In file included from c:/mozilla/mozilla/gfx/cairo/cairo/src/cairoint.h:67,
                 from c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface
.c:48:
../../../../dist/include/libpixman/pixman.h:456: warning: comma at end of enumer
ator list
In file included from c:/mozilla/mozilla/gfx/cairo/cairo/src/cairoint.h:242,
                 from c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface
.c:48:
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-types-private.h:57: warning: ISO C
forbids forward references to `enum' types
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-types-private.h:141: warning: comma
 at end of enumerator list
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c: In function `_cair
o_win32_surface_create_for_dc':
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:348: warning: point
er targets in passing arg 1 of `_moz_cairo_image_surface_create_for_data' differ
 in signedness
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c: In function `_cair
o_win32_surface_acquire_dest_image':
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:640: warning: compa
rison between signed and unsigned
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:642: warning: compa
rison between signed and unsigned
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c: In function `_cair
o_win32_surface_composite':
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:902: warning: initi
alizer element is not computable at load time
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:902: warning: initi
alizer element is not computable at load time
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:902: warning: initi
alizer element is not computable at load time
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:902: warning: initi
alizer element is not computable at load time
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:903: warning: initi
alizer element is not computable at load time
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:903: warning: initi
alizer element is not computable at load time
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:903: warning: initi
alizer element is not computable at load time
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:903: warning: initi
alizer element is not computable at load time
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1040: warning: comp
arison between signed and unsigned
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1040: warning: comp
arison between signed and unsigned
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1041: warning: comp
arison of unsigned expression < 0 is always false
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1041: warning: comp
arison of unsigned expression < 0 is always false
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c: In function `_cair
o_win32_surface_set_clip_region':
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1478: warning: comp
arison between signed and unsigned
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1479: warning: comp
arison between signed and unsigned
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c: At top level:
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1548: error: confli
cting types for '_cairo_win32_surface_get_extents'
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-private.h:132: error: previou
s declaration of '_cairo_win32_surface_get_extents' was here
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1548: error: confli
cting types for '_cairo_win32_surface_get_extents'
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-private.h:132: error: previou
s declaration of '_cairo_win32_surface_get_extents' was here
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c: In function `_moz_
cairo_win32_surface_create_with_ddb':
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1862: warning: assi
gnment from incompatible pointer type
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:1875: warning: assi
gnment from incompatible pointer type
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c: At top level:
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:2014: warning: miss
ing initializer
c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-surface.c:2014: warning: (nea
r initialization for `cairo_win32_surface_backend.fill_stroke')
make[6]: *** [cairo-win32-surface.o] Error 1
make[6]: Leaving directory `/cygdrive/c/mozilla/mozilla/_firefox/gfx/cairo/cairo
/src'
make[5]: *** [libs] Error 2
make[5]: Leaving directory `/cygdrive/c/mozilla/mozilla/_firefox/gfx/cairo'
make[4]: *** [libs] Error 2
make[4]: Leaving directory `/cygdrive/c/mozilla/mozilla/_firefox/gfx'
make[3]: *** [libs_tier_gecko] Error 2
make[3]: Leaving directory `/cygdrive/c/mozilla/mozilla/_firefox'
make[2]: *** [tier_gecko] Error 2
make[2]: Leaving directory `/cygdrive/c/mozilla/mozilla/_firefox'
make[1]: *** [alldep] Error 2
make[1]: Leaving directory `/cygdrive/c/mozilla/mozilla/_firefox'
make: *** [alldep] Error 2

C:\mozilla\mozilla>
Attachment #284478 - Flags: review?
Attachment #284478 - Flags: review? → review?(vladimir)
Have you tried altering line 132 of c:/mozilla/mozilla/gfx/cairo/cairo/src/cairo-win32-private.h to 

_cairo_win32_surface_get_extents (void		          *abstract_surface,

				  cairo_rectangle_int_t *rectangle);



Yes, that's what my patch is doing, no?
I'm just waiting for it to get reviewed.
Assignee: nobody → martijn.martijn
Sorry. I didn't see that there.
Blocks: mingw
Comment on attachment 284478 [details] [diff] [review]
patch

Stuart, or, could you review perhaps?
Attachment #284478 - Flags: review?(pavlov)
Attachment #284478 - Flags: review?(pavlov) → review+
Attachment #284478 - Flags: review?(vladimir) → approval1.9?
Attachment #284478 - Flags: approval1.9? → approval1.9+
Checking in cairo-win32-private.h;
/cvsroot/mozilla/gfx/cairo/cairo/src/cairo-win32-private.h,v  <--  cairo-win32-p
rivate.h
new revision: 1.33; previous revision: 1.32
done

Checked into trunk.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: