Bug 399453 - Mingw build error in cairo-win32-surface.c - error: conflicting types for '_cairo_win32_surface_get_extents', r=pavlov, a=mtschrep